<resources>
    <string name="app_name">Messenger by Esya</string>

    <string name="enter_email">Введите e-mail:</string>
    <string name="enter_password">Введите пароль:</string>
    <string name="repeat_password">Повторите пароль:</string>
    <string name="enter_email_hint">Введите e-mail</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="accept">Подтвердить</string>
    <string name="settings">Настройки</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="send">Отправить</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="change_name">Изменить имя профиля</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_avatar">Изменить аватар</string>
    <string name="delete_avatar">Удалить аватар</string>
    <string name="rename_profile_name_and_press_accept_button">Измените имя профиля и нажмите кнопку "Подтвердить"</string>
    <string name="rename_chat_name_and_press_accept_button">Измените название чата и нажмите кнопку "Подтвердить"</string>
    <string name="cancel">Отменить</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_old_password">Введите старый пароль:</string>
    <string name="enter_new_password">Введите новый пароль:</string>
    <string name="repeat_new_password">Повторите новый пароль:</string>
    <string name="old_password_hint">Старый пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="delete_avatar_confirm">Вы уверены, что хотите удалить аватар?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="your_current_avatar">Ваш текущий аватар:</string>
    <string name="chat_current_avatar">Текущий аватар чата:</string>
    <string name="upload_from_device">Загрузить с устройства</string>
    <string name="or">Или</string>
    <string name="insert_link_to_photo_hint">Вставьте ссылку на фото</string>
    <string name="upload_with_link">Загрузить по ссылке</string>
    <string name="avatar">Avatar</string>
    <string name="start_new_dialog">+ Начать новый диалог</string>

    <plurals name="new_messages">
        <item quantity="zero">Нет новых сообщений</item> <!--TODO: Добавить Нет сообщений -->
        <item quantity="one">%d новое сообщение</item>
        <item quantity="two">%d новых сообщения</item>
        <item quantity="few">%d новых сообщений</item>
        <item quantity="many">%d новых сообщений</item>
        <item quantity="other">%d новых сообщений</item>
    </plurals>

    <string name="enter_user_email">Введите адрес электронной почты пользователя</string>
    <string name="enter_user_name">Введите имя пользователя</string>
    <string name="you_cant_not_be_a_chat_participant">Вы не можете не быть участником чата</string>
    <string name="you_cant_exclude_current_chat_participants">Вы не можете исключить текущих участников чата</string>
    <string name="user_create_a_chat">%1$s создает чат</string>
    <string name="something_went_wrong_try_inserting_another_link_or_saving_the_image_to_the_device_memory">Что-то пошло не так:( Попробуйте вставить другую ссылку или сохраните изображение в память устройства</string>
    <string name="check_your_internet_connection">Проверьте подключение к Интернету</string>
    <string name="send_image">Отправить изображение?</string>
    <string name="users_cant_be_less_than_2">Пользователей не может быть меньше 2</string>
    <string name="participants">Участники</string>
    <string name="attachments">Вложения</string>
    <string name="change_chat_name">Изменить название чата</string>
    <string name="change_chat_avatar">Изменить аватар чата</string>
    <string name="delete_chat_avatar">Удалить аватар чата</string>
    <string name="leave_from_chat">Выйти из чата</string>
    <string name="invite_participants">Пригласить участников</string>
    <string name="attachments_is_missing">Вложения отсутствуют</string>
    <string name="enter_image_content_description">Введите описание изображения</string>
    <string name="user_online">Пользователь онлайн</string>
    <string name="user_offline">Пользователь оффлайн</string>
    <string name="user_is_selected">Пользователь выбран</string>
    <string name="user_is_unselected">Пользователь не выбран</string>
    <string name="attach_attachments">Прикрепить вложения</string>
    <string name="open_menu">Открыть меню</string>
    <string name="open_settings">Открыть настройки</string>
    <string name="play_button">Кнопка "Начать проигрывание"</string>
    <string name="pause_button">Кнопка "Приостановить проигрывание"</string>
    <string name="voice_message_length">Длина голосового сообщения</string>
    <string name="voice_message_position">Позиция голосового сообщения</string>


</resources>