<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/playPauseImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:accessibilityLiveRegion="polite"
        android:background="@drawable/play_icon"
        android:contentDescription="@string/play_button"
        android:importantForAccessibility="yes"
        app:layout_constraintBottom_toBottomOf="@+id/voiceMessageTimeTextView"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/voiceMessageSeekBar" />

    <TextView
        android:id="@+id/voiceMessageTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:accessibilityLiveRegion="none"
        android:contentDescription="@string/voice_message_length"
        android:importantForAccessibility="yes"
        app:layout_constraintStart_toEndOf="@+id/playPauseImageButton"
        app:layout_constraintTop_toBottomOf="@+id/voiceMessageSeekBar"
        tools:text="00:01/00:59" />

    <SeekBar
        android:id="@+id/voiceMessageSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:accessibilityLiveRegion="none"
        android:contentDescription="@string/voice_message_position"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playPauseImageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />
</androidx.constraintlayout.widget.ConstraintLayout>