<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingFragmentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/authentification_background"
    tools:context=".fragments.SettingFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:accessibilityLiveRegion="none"
        android:importantForAccessibility="yes"
        android:text="@string/profile_settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeNameButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/authentification_button"
        android:importantForAccessibility="yes"
        android:text="@string/change_name"
        android:textAllCaps="false"
        android:textColor="@drawable/authentification_button_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/changePasswordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/authentification_button"
        android:importantForAccessibility="yes"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@drawable/authentification_button_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/changeAvatarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeNameButton" />

    <Button
        android:id="@+id/changeAvatarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@drawable/authentification_button"
        android:importantForAccessibility="yes"
        android:text="@string/change_avatar"
        android:textAllCaps="false"
        android:textColor="@drawable/authentification_button_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteAvatarButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton" />

    <Button
        android:id="@+id/deleteAvatarButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:accessibilityLiveRegion="assertive"
        android:background="@color/delete_avatar_button_background"
        android:importantForAccessibility="yes"
        android:text="@string/delete_avatar"
        android:textAllCaps="false"
        android:textColor="@drawable/delete_avatar_button_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeAvatarButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="none"
        android:importantForAccessibility="no"
        app:constraint_referenced_ids="changePasswordButton,changeNameButton,changeAvatarButton,deleteAvatarButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>